Quorum/Library/Tests/Actions/Pass/Return2ActionsNum.quorum
class Main
    action Main
        number a = -2
        output bar(foo(a))
    end

    action foo (number a) returns number
        a = a * -1
        return a
    end

    action bar(number a) returns number
        a = a * 10
        return a
    end
end