Quorum/Library/Tests/Actions/Fail/ReturnCast2ActionsInt.quorum
class Main
    action Main
        integer a = -2
        x = foo(a)
        output x
        output bar(x)
    end

    action foo (integer a) returns number
        return a * -1
    end

    action bar (number a) returns integer
        return a * 10
    end
end